--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,6 +63,12 @@ body button {
   max-width: 25vw;
 }
 
+#TOCView {
+    max-height: calc(100vh - 150px);
+    min-height: 0;
+    overflow-x: hidden;
+}
+
 .toc ul,
 .toc li {
   @apply px-0 leading-snug list-none;
